fix alignment of the logos so they are all properly centered

--- a/src/components/HompageFeatures/styles.module.css
+++ b/src/components/HompageFeatures/styles.module.css
@@ -230,6 +230,8 @@ h1 {
 
 .imageButtonRow img {
     width: 200px;
+    height: 150px;
+    object-fit: contain;
 }
 
 
